microshak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microshak-service
spec:
  selector:
    app: microshak-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
