microshak/ingress-without-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cool-app-ingress
    # use the shared ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cool-app-service
            port:
              number: 80

  ingressClassName: public
