microshak/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Ingress
metadata:
  name: cool-app-ingress
    # use the shared ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - microhsak.com
      secretName: tls-secret
  rules:
  - host: microshak.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cool-app-service
            port:
              number: 80

  ingressClassName: public
